--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,9 +2,124 @@ html {
     height: 100%;
 }
 
+#hero-image-container {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    width: 65%;
+    margin: 0 auto;
+    margin-top: 3rem;
+    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+    background-image: url("/media/hero-image-final.webp");
+  
+    /* Set a specific height */
+    height: 40rem;
+  
+    /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    border-radius: 10px;
+    border: 1px solid #551b8c;
+    border: 1px solid red;
+}
+
+
+#hero-image-text-heading {
+    margin: 0 auto;
+    font-family: "Urbanist";
+    font-size: 4rem !important;
+    font-weight: 200;
+    width: 30rem;
+    text-align: left;
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    color: white;
+    border: 1px solid green;
+}
+
+#hero-image-text-sub-heading {
+    font-size: 1.5rem;
+    font-family: "Urbanist";
+    font-weight: 100;
+    width: 30rem;
+    text-align: left;
+    position: absolute;
+    top: 70%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    color: white;
+    border: 1px solid orange;
+}
+
+/* shop-button {
+    width: 20rem;
+    text-align: center; */
+    /* background: #551b8c; */
+    /* position: absolute;
+    transform: translate(-50%, -50%);
+    top: 80%;
+    left: 19%;
+    border: 1px solid #551b8c;
+    display: inline-block;
+    outline: 0;
+    cursor: pointer;
+    border: none;
+    padding: 0 56px;
+    height: 45px;
+    line-height: 45px;
+    border-radius: 7px;
+    background-color: #0070f3;
+    color: white;
+    font-weight: 400;
+    font-size: 16px;
+    box-shadow: 0 4px 14px 0 rgb(0 118 255 / 39%);
+    transition: background 0.2s ease,color 0.2s ease,box-shadow 0.2s ease;
+} */
+
+
+/* The glow effect for the shop button below was adapted from code by codepen user Kanishk Kunal 
+link to code is here https://codepen.io/kanishkkunal/pen/obGojO */
+
+#shop-button {
+    text-decoration: none;
+    width: 20rem;
+    text-align: center;
+    /* background: #551b8c; */
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 80%;
+    left: 19%;
+    text-decoration: none;
+    background: #551b8c;
+    /* padding: 15px 40px; */
+    border-radius: 15px;
+    font-weight: normal;
+    text-transform: uppercase;
+    transition: all 0.2s ease-in-out;
+    border: 1px solid #ed82ed;;
+    box-shadow: 0 0px 50px #ed82ed;
+  }
+
+#shop-button:hover{
+    background: #c71585;
+    box-shadow: 0 0px 100px #ed82ed;
+}
+
+#shop-button a {
+    font-size: 1.5rem;
+    color: white;
+    text-decoration: none;
+}
+
+
+
 
 /* Need to adjust the hero image using the rules below */
-body {
+/* body {
     background: url('/media/hero-image-final.webp') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
@@ -13,7 +128,7 @@ body {
     font-optical-sizing: auto;
     font-weight: 900;
     font-style: normal;
-}
+} */
 
 /* from Bulma, used to ensure consistent styling of icons (centering etc) */
 .icon {
