--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -19,31 +19,26 @@
 
 <div id="hero-image-container">
 
-    <!-- <div id="hero-image">
-        <img src="/media/hero-image-final.webp" alt="Chocelegance hero image showing chocolates enclosed in a heart">
-    </div> -->
-    <!-- <div id="hero-image-text-overlay"> -->
+    <!-- Hero image main text -->
+    <div id="hero-image-text-heading">
+        <p>
+            It's time to <strong>treat*</strong> yourself!
+        <p>
+    </div>
 
-        <!-- Hero image main text -->
-        <div id="hero-image-text-heading">
-            <p>
-                It's time to <strong>treat*</strong> yourself!
-            <p>
-        </div>
+    <!-- Hero image sub text -->
+    <div id="hero-image-text-sub-heading">
+        <p>
+            <strong>*Guaranteed guilt free</strong>
+        </p>
+    </div>
 
-        <!-- Hero image sub text -->
-        <div id="hero-image-text-sub-heading">
-            <p>
-                <strong>*Guaranteed guilt free</strong>
-            </p>
-        </div>
-
-        <!-- Treat yourself now button, links to all chocolates -->
-        <div id="shop-button">
-            <p>
-                <a href="{% url 'chocolates' %}">Treat Yourself Now!</a>
-            </p>
-        </div>
+    <!-- Treat yourself now button, links to all chocolates -->
+    <div id="shop-button">
+        <p>
+            <a href="{% url 'chocolates' %}">Treat yourself now!</a>
+        </p>
+    </div>
 
     <!-- </div> -->
 </div>
@@ -54,27 +49,6 @@
 
 
 
-
-        <!-- Hero text overlay
-        <div class="col-8 my-auto">
-            <h1 class="display-2 logo-font text-black">
-                It's time to <strong>treat*</strong> yourself!
-            </h1>
-            <br>
-            <br>
-            <h2 class="display-4 logo-font text-black">
-                <strong>*Guaranteed guilt free</strong>
-            </h2> -->
-
-        <!-- Treat yourself now button, links to all chocolates -->
-        <!-- <div class="my-5">
-                <h4>
-                    <a href="{% url 'chocolates' %}" class="shop-now-button btn btn-success btn-lg rounded-1 py-3">Treat
-                        Yourself Now!</a>
-                </h4>
-            </div>
-
-        </div> -->
 
     </div>
 </div>
