--- a/templates/base.html
+++ b/templates/base.html
@@ -152,7 +152,7 @@
     <!-- Free Shipping banner -->
     <div id="delivery-banner" class="text-center">
       <div class="col text-white mt-1">
-        <h4 class="my-1">Free delivery on orders over €{{ free_shipping_threshold }}!</h4>
+        <h4 class="my-1">Free delivery on orders over €{{ free_delivery_threshold }}!</h4>
       </div>
     </div>
 
