--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -98,7 +98,8 @@
                                 </span>
                                 <span class="text-uppercase">Keep Shopping</span>
                             </a>
-                            <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Cart">
+                            <!-- Add to cart button -->
+                            <input type="submit" class="btt-button" value="Add to Cart">
                         </div>
                         <!-- Hidden input containing current URL, allows redirect back to same page after chocolate added -->
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
