Add cart quantity logic to contexts.py in cart app

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -299,6 +299,7 @@ a.category-badge > span.badge:hover {
     background: #742557;
     border: 1px solid #ed82ed;
     box-shadow: 0 0px 10px #ed82ed;
+    text-decoration: none;
 }
 
 #keep-shopping-button a {
