Fix typo in contexts.py in cart app

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -37,7 +37,7 @@
             {% if cart_items %}
             <!-- Table is only rendered if there is an item in the cart -->
             <div class="table-responsive rounded-2">
-
+                {{ cart_items }}
             </div>
             {% else %}
             <!-- If no item is in the cart, the message below is displayed instead -->
