--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -35,10 +35,80 @@
     <div class="row">
         <div class="col">
             {% if cart_items %}
-            <!-- Table is only rendered if there is an item in the cart -->
-            <div class="table-responsive rounded-2">
-                {{ cart_items }}
+            <!-- Table is only rendered if there is an item in the cart, it will
+            be used to display details of the chocolates added to the cart -->
+            <div class="table-responsive rounded">
+                <table class="table table-sm table-borderless">
+
+                    <!-- Header row of table with column titles -->
+                    <thead class="text-black">
+                        <tr>
+                            <th scope="col">Chocolate Info</th>
+                            <th scope="col"></th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Qty</th>
+                            <th scope="col">Subtotal</th>
+                        </tr>
+                    </thead>
+
+                    <!-- This row oops through the items in the cart and retrieves specific details -->
+                    {% for item in cart_items %}
+                    <tr>
+                        <td class="p-3 w-25">
+                            <img class="img-fluid rounded" src="{{ item.chocolate.choc_image.url }}">
+                        </td>
+                        <td class="py-3">
+                            <p class="my-0"><strong>{{ item.chocolate.choc_friendly_name }}</strong></p>
+                            <!-- <p class="my-0 small text-muted">SKU: {{ item.chocolate.sku|upper }}</p> -->
+                        </td>
+                        <td class="py-3">
+                            <p class="my-0">€{{ item.chocolate.choc_price }}</p>
+                        </td>
+                        <td class="py-3 w-25">
+                            <p class="my-0">{{ item.quantity }}</p>
+                        </td>
+                        <td class="py-3">
+                            <p class="my-0">€{{ item.chocolate.choc_price }}</p>
+                        </td>
+                    </tr>
+                    {% endfor %}
+
+                    <!-- This row renders the details of the transaction total -->
+                    <tr>
+                        <td colspan="5" class="pt-5 text-right">
+                            <h6><strong>Cart Total: €{{ total|floatformat:2 }}</strong></h6>
+                            <h6>Delivery: €{{ delivery|floatformat:2 }}</h6>
+                            <h4 class="mt-4"><strong>Grand Total: €{{ grand_total|floatformat:2 }}</strong></h4>
+                            {% if free_delivery_delta > 0 %}
+                            <p class="mb-1 text-danger">
+                                Psst.. You could get free delivery by spending just <strong>€{{ free_delivery_delta }}</strong>
+                                more!
+                            </p>
+                            {% endif %}
+                        </td>
+                    </tr>
+
+                    <!-- This row renders the checkout link -->
+                    <tr>
+                        <td colspan="5" class="text-right">
+                            <a href="{% url 'chocolates' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                                <span class="icon">
+                                    <i class="fas fa-chevron-left"></i>
+                                </span>
+                                <span class="text-uppercase">Keep Shopping</span>
+                            </a>
+                            <a href="" class="btn btn-black rounded-0 btn-lg">
+                                <span class="text-uppercase">Secure Checkout</span>
+                                <span class="icon">
+                                    <i class="fas fa-lock"></i>
+                                </span>
+                            </a>
+                        </td>
+                    </tr>
+                </table>
+                <!-- Table ends above this line -->
             </div>
+
             {% else %}
             <!-- If no item is in the cart, the message below is displayed instead -->
             <p class="lead mb-5">
