--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -59,13 +59,49 @@
                         </td>
                         <td class="py-3">
                             <p class="my-0"><strong>{{ item.chocolate.choc_friendly_name }}</strong></p>
-                            <!-- <p class="my-0 small text-muted">SKU: {{ item.chocolate.sku|upper }}</p> -->
                         </td>
                         <td class="py-3">
                             <p class="my-0">€{{ item.chocolate.choc_price }}</p>
                         </td>
                         <td class="py-3 w-25">
-                            <p class="my-0">{{ item.quantity }}</p>
+
+                            <!-- The form below allows user to adjust item quantity at the cart screen -->
+                            <form method="POST" action="" class="form update-form">
+                                {% csrf_token %}
+                                
+                                <div class="form-group">
+                                    <div class="input-group">
+    
+                                        <!-- Button to reduce number of chocolates -->
+                                        <div class="input-group-prepend">
+                                            <button class="decrement-qty btn btn-sm btn-black rounded-0"
+                                                data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                                                <span>
+                                                    <i class="fas fa-minus fa-sm"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+    
+                                        <input class="form-control qty_input" type="number" name="quantity" value="{{ item.quantity }}"
+                                            min="1" max="99" data-item_id="{{ item.item_id }}"
+                                            id="id_qty_{{ item.item_id }}">
+    
+                                        <!-- Button to increase number of chocolates -->
+                                        <div class="input-group-append">
+                                            <button class="increment-qty btn btn-sm btn-black rounded-0"
+                                                data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                                                <span>
+                                                    <i class="fas fa-plus fa-sm"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        
+                                    </div>
+                                </div>
+
+
+
+                            </form>
                         </td>
                         <td class="py-3">
                             <p class="my-0">€{{ item.chocolate.choc_price }}</p>
