--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -98,10 +98,10 @@
                                         
                                     </div>
                                 </div>
-
-
-
                             </form>
+                            <!-- Form ends above this line -->
+                            <a class="update-link text-success"><small>Update</small></a>
+                            <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}"><small>Remove</small></a>
                         </td>
                         <td class="py-3">
                             <p class="my-0">€{{ item.chocolate.choc_price }}</p>
@@ -165,4 +165,9 @@
 
 
 </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'chocolates/includes/quantity_input_script.html' %}
 {% endblock %}
