--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -170,4 +170,26 @@
 {% block postloadjs %}
 {{ block.super }}
 {% include 'chocolates/includes/quantity_input_script.html' %}
+
+<script type="text/javascript">
+    // Update quantity on click
+    $('.update-link').click(function(e) {
+        var form = $(this).prev('.update-form');
+        form.submit();
+    })
+
+    // Remove item and reload on click
+    $('.remove-item').click(function(e) {
+        var csrfToken = "{{ csrf_token }}";
+        var itemId = $(this).attr('id').split('remove_')[1];
+        var url = `/cart/remove/${itemId}`;
+
+        $.post(url)
+         .done(function() {
+             location.reload();
+         });
+    })
+</script>
+
+
 {% endblock %}
