Add update and remove classes to base.css to display cursor when hovering

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -235,7 +235,9 @@ a.category-badge > span.badge:hover {
     color: white;
 }
 
-.btt-link {
+.btt-link,
+.update-link,
+.remove-item {
     cursor: pointer;
 }
 
