--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -66,7 +66,7 @@
                         <td class="py-3 w-25">
 
                             <!-- The form below allows user to adjust item quantity at the cart screen -->
-                            <form method="POST" action="" class="form update-form">
+                            <form method="POST" action="{% url 'adjust_cart' item.item_id %}" class="form update-form">
                                 {% csrf_token %}
                                 
                                 <div class="form-group">
