--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -182,9 +182,10 @@
     $('.remove-item').click(function(e) {
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
-        var url = `/cart/remove/${itemId}`;
+        var url = `remove/${itemId}/`;
+        var data = {'csrfmiddlewaretoken': csrfToken}
 
-        $.post(url)
+        $.post(url, data)
          .done(function() {
              location.reload();
          });
