--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -1,6 +1,7 @@
 <!-- This template is extended from the main base.html file located in the root templates directory -->
 {% extends "base.html" %}
 {% load static %}
+{% load bag_tools %}
 
 <!-- Additional sub-header block below main header, extended from base.html -->
 {% block page_header %}
@@ -104,7 +105,7 @@
                             <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}"><small>Remove</small></a>
                         </td>
                         <td class="py-3">
-                            <p class="my-0">€{{ item.chocolate.choc_price }}</p>
+                            <p class="my-0">€{{ item.chocolate.choc_price | calc_subtotal:item.quantity }}</p>
                         </td>
                     </tr>
                     {% endfor %}
@@ -176,20 +177,21 @@
     $('.update-link').click(function(e) {
         var form = $(this).prev('.update-form');
         form.submit();
-    })
+    });
 
     // Remove item and reload on click
     $('.remove-item').click(function(e) {
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
         var url = `remove/${itemId}/`;
-        var data = {'csrfmiddlewaretoken': csrfToken}
+        var data = {'csrfmiddlewaretoken': csrfToken};
 
         $.post(url, data)
          .done(function() {
              location.reload();
          });
-    })
+    });
+    // JS code block validate in JS Hint, no error
 </script>
 
 
