Add js script to show toasts to base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -182,6 +182,9 @@
 
   <!-- Block for additional JS when required -->
   {% block postloadjs %}
+  <script type="text/javascript">
+    $('.toast').toast('show');
+  </script>
 
   {% endblock %}
 
