Add styling for toast-capper class

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -320,7 +320,9 @@ a.category-badge > span.badge:hover {
     overflow: visible;
 }
 
-
+.toast-capper {
+    height: .3rem;
+}
 
 /* -------------------------------- Media Queries ------------------------------- */
 
