--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,17 +1,17 @@
-<div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
-    <div class="arrow-up arrow-success"></div>
-    <div class="w-100 toast-capper bg-success"></div>
+<div class="toast custom-toast border-top-0 rounded-2" data-autohide="false">
+    <div class="arrow-up arrow-success rounded-2"></div>
+    <div class="w-100 toast-capper bg-success rounded-2"></div>
 
     <!-- Toast header -->
-    <div class="toast-header bg-white text-dark">
+    <div class="toast-header rounded-2">
         <strong class="mr-auto">Success!</strong>
-        <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
+        <button type="button" class="ml-2 mb-1 close text-white" data-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
 
     <!-- Toast body -->
-    <div class="toast-body bg-white">
+    <div class="toast-body rounded-2">
         <!-- The message will be shown in the message container in base.html -->
         {{ message }}        
     </div>
