--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -3,15 +3,15 @@
     <div class="w-100 toast-capper bg-danger"></div>
 
     <!-- Toast header -->
-    <div class="toast-header bg-white text-dark">
+    <div class="toast-header">
         <strong class="mr-auto">Error</strong>
-        <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
+        <button type="button" class="ml-2 mb-1 close text-white" data-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
 
     <!-- Toast body -->
-    <div class="toast-body bg-white">
+    <div class="toast-body">
         <!-- The message will be shown in the message container in base.html -->
         {{ message }}        
     </div>
