Add success message for updating quantity to add_to_cart view in cart app

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -339,11 +339,13 @@ a.category-badge > span.badge:hover {
 
 .toast-header > button {
     color: white;
+
 }
 
 .toast-body {
     background: #882bde;
     color: white;
+    border-top: 1px solid #c71585;
 }
 /* -------------------------------- Media Queries ------------------------------- */
 
