Add logic to display cart details to toast_success.html

--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -12,7 +12,63 @@
 
     <!-- Toast body -->
     <div class="toast-body rounded-2">
-        <!-- The message will be shown in the message container in base.html -->
-        {{ message }}        
+        <div class="row">
+            <!-- The success message will be shown in the message container in base.html -->
+           <div class="col">
+               {{ message }}
+               <hr class="mt-1 mb-3 toast-hr">
+           </div>
+       </div>
+
+       <!-- DTL logic to display shopping cart items -->
+       {% if grand_total and not on_profile_page %}
+
+            <!-- Cart total quantity -->
+            <p class="py-1">Your Cart Total: {{ chocolate_count }} items</p>
+            <div class="bag-notification-wrapper">
+                {% for item in cart_items %}
+                    <div class="row">
+
+                        <!-- Chocolate image -->
+                        <div class="col-3 my-1">
+                            {% if item.chocolate.choc_image %}
+                            <img class="w-100" src="{{ item.chocolate.choc_image.url }}" alt="{{ item.chocolate.choc_friendly_name }}">
+                            {% else %}
+                            <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.chocolate.choc_name }}">
+                            {% endif %}
+                        </div>
+
+
+                        <!-- Chocolate name and quantity -->
+                        <div class="col-9">
+                            <p class="my-0"><strong>{{ item.chocolate.choc_friendly_name }}</strong></p>
+                            <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+
+            <!-- Grand total and checkout link -->
+            <div class="row">
+                <div class="col">
+                    <strong><p class="mt-3 mb-1 text-black">
+                        Total{% if free_delivery_delta > 0 %} (Exc. delivery){% endif %}: 
+                        <span class="float-right">${{ total|floatformat:2 }}</span>
+                    </p></strong>
+                    {% if free_delivery_delta > 0 %}
+                        <p class="mb-0 p-2 bg-warning shadow-sm text-black text-center">
+                            Spend <strong>${{ free_delivery_delta }}</strong> more to get free next day delivery!
+                        </p>
+                    {% endif %}
+                    <a href="{% url 'view_cart' %}" class="btn btn-black btn-block rounded-0">
+                        <span class="text-uppercase">Go To Secure Checkout</span>
+                        <span class="icon">
+                            <i class="fas fa-lock"></i>
+                        </span>
+                    </a>
+                </div>
+            </div>
+        {% endif %}
     </div>
 </div>
+
