--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -16,7 +16,7 @@
             <!-- The success message will be shown in the message container in base.html -->
            <div class="col">
                {{ message }}
-               <hr class="mt-1 mb-3 toast-hr">
+               <hr class="mt-2 mb-3 toast-hr">
            </div>
        </div>
 
@@ -24,7 +24,7 @@
        {% if grand_total and not on_profile_page %}
 
             <!-- Cart total quantity -->
-            <p class="py-1">Your Cart Total: {{ chocolate_count }} items</p>
+            <p class="py-1">Your Cart Quantity: {{ chocolate_count }} items</p>
             <div class="bag-notification-wrapper">
                 {% for item in cart_items %}
                     <div class="row">
@@ -42,7 +42,7 @@
                         <!-- Chocolate name and quantity -->
                         <div class="col-9">
                             <p class="my-0"><strong>{{ item.chocolate.choc_friendly_name }}</strong></p>
-                            <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
+                            <p class="my-0 small">Qty: {{ item.quantity }}</p>
                         </div>
                     </div>
                 {% endfor %}
@@ -51,13 +51,13 @@
             <!-- Grand total and checkout link -->
             <div class="row">
                 <div class="col">
-                    <strong><p class="mt-3 mb-1 text-black">
+                    <strong><p class="mt-3 mb-1">
                         Total{% if free_delivery_delta > 0 %} (Exc. delivery){% endif %}: 
                         <span class="float-right">${{ total|floatformat:2 }}</span>
                     </p></strong>
                     {% if free_delivery_delta > 0 %}
-                        <p class="mb-0 p-2 bg-warning shadow-sm text-black text-center">
-                            Spend <strong>${{ free_delivery_delta }}</strong> more to get free next day delivery!
+                        <p class="my-2 p-2 toast-free-delivery shadow-sm text-center">
+                            Spend <strong>€{{ free_delivery_delta }}</strong> more to get free delivery!
                         </p>
                     {% endif %}
                     <a href="{% url 'view_cart' %}" class="btn btn-black btn-block rounded-0">
