--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -53,7 +53,7 @@
                 <div class="col">
                     <strong><p class="mt-3 mb-1">
                         Total{% if free_delivery_delta > 0 %} (Exc. delivery){% endif %}: 
-                        <span class="float-right">${{ total|floatformat:2 }}</span>
+                        <span class="float-right">€{{ total|floatformat:2 }}</span>
                     </p></strong>
                     {% if free_delivery_delta > 0 %}
                         <p class="my-2 p-2 toast-free-delivery shadow-sm text-center">
