--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -44,12 +44,12 @@
 </div>
 
 
-<div class="container h-100 col-8 mx-auto">
+<!-- <div class="container h-100 col-8 mx-auto">
     <div class="row h-100 col-8 mx-auto">
 
 
 
 
     </div>
-</div>
+</div> -->
 {% endblock %}
