--- a/static/css/base.css
+++ b/static/css/base.css
@@ -8,11 +8,12 @@ body {
 
 
 #hero-image-container {
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     align-items: left;
-    width: 65%;
-    margin: 0 auto;
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;
     margin-top: 3rem;
     /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
     background-image: url("/media/hero-image-final.webp");
@@ -24,23 +25,23 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
+    position: Absolute;
     border-radius: 10px;
     border: 1px solid #551b8c;
 }
 
 
 #hero-image-text-heading {
-    margin: 0 auto;
     font-family: "Urbanist";
     font-size: 4rem !important;
     font-weight: 200;
-    width: 30rem;
+    width: 40rem;
+    height: 20rem;
     text-align: left;
-    position: absolute;
-    top: 25%;
-    left: 25%;
-    transform: translate(-50%, -50%);
+    position: relative;
+    top: 10%;
+    left: 10%;
+    /* transform: translate(-50%, -50%); */
     color: white;
 }
 
@@ -48,12 +49,12 @@ body {
     font-size: 1.5rem;
     font-family: "Urbanist";
     font-weight: 100;
-    width: 30rem;
+    width: 20rem;
     text-align: left;
-    position: absolute;
-    top: 65%;
-    left: 25%;
-    transform: translate(-50%, -50%);
+    position: relative;
+    top: 10%;
+    left: 10%;
+    /* transform: translate(-50%, -50%); */
     color: white;
 }
 
@@ -88,13 +89,11 @@ link to code is here https://codepen.io/kanishkkunal/pen/obGojO */
 
 #shop-button {
     width: 20rem;
-    /* background: #551b8c; */
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 80%;
-    left: 20%;
+    position: relative;
+    /* transform: translate(-50%, -50%); */
+    top: 20%;
+    left: 10%;
     background: #551b8c;
-    /* padding: 15px 40px; */
     border-radius: 15px;
     font-weight: normal;
     transition: all 0.2s ease-in-out;
@@ -202,7 +201,7 @@ link to code is here https://codepen.io/kanishkkunal/pen/obGojO */
 }
 
 #delivery-banner {
-    border-radius: 5px;
+    border-radius: 10px;
     /* Background gradient effect generated from cssgradient.io */
     background: rgb(237,130,237);
     background: -moz-linear-gradient(153deg, rgba(237,130,237,1) 0%, rgba(199,21,128,1) 22%, rgba(199,21,128,1) 82%, rgba(237,130,237,1) 100%);
