Add heading sizes to menu headers in main-nav.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
       <!-- Logo -->
       <div class="col-12 col-lg-4 my-auto py-2 py-lg-0 text-center text-lg-left">
         <a href="{% url 'home' %}" class="nav-link main-logo-link">
-          <h2 class="text-black my-1"><strong>Chocelegance</strong></h2>
+          <h2 class="purple-text my-1"><strong>Chocelegance</strong></h2>
         </a>
       </div>
 
