--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,9 +6,12 @@ body {
     font-family: "Urbanist", Arial, Helvetica, sans-serif;
 }
 
+.purple-text {
+    color: #551b8c !important;
+}
+
 #base-header{
     width: 70% !important;
-    border: 1px solid green;
     padding: 0 !important;
 }
 
