Add purple border to search bar

--- a/templates/base.html
+++ b/templates/base.html
@@ -76,10 +76,10 @@
       <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
         <form method="GET" action="{% url 'chocolates' %}">
           <div class="input-group w-100">
-            <input class="form-control border border-black rounded-2" type="text" name="q"
+            <input class="form-control border border-purple rounded-2" type="text" name="q"
               placeholder="Search for chocolates..">
             <div class="input-group-append">
-              <button class="form-control btn btn-black border border-black rounded-2" type="submit">
+              <button class="form-control btn btn-purple border border-purple rounded-2" type="submit">
                 <span class="icon">
                   <i class="fas fa-search"></i>
                 </span>
