--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
 
           <!-- My Account -->
           <li class="list-inline-item dropdown">
-            <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
+            <a class="purple-text nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
               <div class="text-center">
                 <div><i class="fas fa-user fa-lg"></i></div>
@@ -120,7 +120,7 @@
 
           <!-- Shopping cart -->
           <li class="list-inline-item">
-            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
+            <a class="{% if grand_total %}active-cart font-weight-bold{% else %}purple-text{% endif %} nav-link"
               href="{% url 'view_cart' %}">
               <div class="text-center">
                 <div><i class="fas fa-shopping-bag fa-lg"></i></div>
