--- a/templates/base.html
+++ b/templates/base.html
@@ -107,13 +107,13 @@
             <div class="dropdown-menu border-0" aria-labelledby="user-options">
               {% if request.user.is_authenticated %}
               {% if request.user.is_superuser %}
-              <a href="" class="dropdown-item">Product Management</a>
+              <a href="" class="dropdown-item purple-text">Product Management</a>
               {% endif %}
-              <a href="" class="dropdown-item">My Profile</a>
-              <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+              <a href="" class="dropdown-item purple-text">My Profile</a>
+              <a href="{% url 'account_logout' %}" class="dropdown-item purple-text">Logout</a>
               {% else %}
-              <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-              <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+              <a href="{% url 'account_signup' %}" class="dropdown-item purple-text">Register</a>
+              <a href="{% url 'account_login' %}" class="dropdown-item purple-text">Login</a>
               {% endif %}
             </div>
           </li>
