--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -53,7 +53,7 @@
                 <p class="small mt-1 mb-0">
                     <a class="text-muted"
                         href="{% url 'chocolates' %}?category={{ chocolates.choc_category_display.choc_category_name }}">
-                        <i class="fas fa-tag mr-2"></i>{{ chocolate.choc_category_display.choc_friendly_name }}
+                        <i class="fas fa-tag mr-2 active-cart"></i>{{ chocolate.choc_category_display.choc_friendly_name }}
                     </a>
                 </p>
                 {% endif %}
